Fix a bug where useless scrollbar appeared (Fixes #2)

--- a/assets/scenes/Maintenance/components/MaintenancePage/styles.scss
+++ b/assets/scenes/Maintenance/components/MaintenancePage/styles.scss
@@ -7,7 +7,7 @@
 // Styles
 .maintenance-page {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
